# homologacao-ponto

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  debug_html.py  package.json  pyproject.toml  servidores.yaml
.claude/commands/: speckit-implement.md  speckit-specify.md
.github/workflows/: deploy.yml  export.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
crawler/: .env.example  package-lock.json  package.json
crawler/src/: batch.js  cli.js  sigrh.js
dashboard/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
dashboard/src/: env.d.ts
desktop/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: bundle-crawler.mjs
desktop/src/: App.vue  main.ts  style.css
desktop/src-crawler/: batch.js  cli.js  descobrir.js  homologar-celio.test.js  homologar.js  homologar.test.js  package.json  parser.js  parser.test.js  sigrh.js  stale.js  stale.test.js  writer.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: TECHNICAL.md  USUARIO.md  espelho-ponto-schema.yaml  regras-homologacao-ponto-frequencia.md
docs/architecture/: backlog.md  data-flow.md  layers.md  overview.md
docs/regras-homologacao/: auditoria-alertas.md  espelho-mensal.md  frequencia-mensal.md  horas-banco.md  (+4 more)
(+416 files in other folders)
