[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homologacao-ponto"
version = "0.1.0"
description = "Crawler local para login SIGRH e coleta de registros de ponto autorizados."
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.44",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "pytest-playwright>=0.5",
  "jsonschema>=4.22",
]

[project.scripts]
homologacao-ponto = "homologacao_ponto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
markers = [
  "unit: fast unit tests",
  "integration: integration tests with fakes or Playwright route mocks",
  "contract: CLI and JSON contract tests",
]
